- Adicionada tela de atualização de preços do posto - Adicionada tela de avaliação do posto - Adicionado botão na tela de cadastro do posto que redireciona para a tela de atualização - Alteração na activity do mapa para o app poder abrir na tela de cadastro (temporária)

--- a/app/src/main/res/layout/activity_cad_posto.xml
+++ b/app/src/main/res/layout/activity_cad_posto.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:text="Avaliação"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -208,12 +208,10 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:text="Cadastro de posto de gasolina"
         android:textAlignment="center"
-        android:textSize="28sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -223,7 +221,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="Nome:"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -246,8 +244,7 @@
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="60dp"
         android:ems="10"
         android:hint="Digite o nome do serviço"
         android:inputType="textPersonName"
@@ -265,5 +262,15 @@
         android:rating="3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/btnAttPrecos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="Atualizar preços"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
