--- a/app/src/main/res/layout/activity_cad_mec.xml
+++ b/app/src/main/res/layout/activity_cad_mec.xml
@@ -25,7 +25,6 @@
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
-        android:layout_marginTop="24dp"
         android:text="Cancelar"
         android:textColor="#80000000"
         android:textSize="12sp"
@@ -33,7 +32,7 @@
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+        tools:layout_editor_absoluteY="353dp" />
 
     <EditText
         android:id="@+id/txtEstadoMec"
@@ -83,17 +82,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7" />
 
-    <RatingBar
-        android:id="@+id/ratingBar"
-        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:rating="4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
     <EditText
         android:id="@+id/txtRuaMec"
         android:layout_width="0dp"
@@ -107,16 +95,6 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="75dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Avaliação:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <EditText
         android:id="@+id/txtCidadeMec"
