- Adicionada funçao de cadastro de usuário.

--- a/app/src/main/res/layout/activity_cad_usuario.xml
+++ b/app/src/main/res/layout/activity_cad_usuario.xml
@@ -8,21 +8,21 @@
     tools:context=".CadUsuario">
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/btnEnviar"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
         android:text="Enviar"
         android:textColor="#80000000"
         android:textSize="12sp"
         app:backgroundTint="#C4C4C4"
-        app:layout_constraintBottom_toBottomOf="@+id/button7"
+        app:layout_constraintBottom_toBottomOf="@+id/btnCancelar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button7"
-        app:layout_constraintTop_toTopOf="@+id/button7" />
+        app:layout_constraintStart_toEndOf="@+id/btnCancelar"
+        app:layout_constraintTop_toTopOf="@+id/btnCancelar" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/btnCancelar"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
         android:layout_marginTop="24dp"
@@ -30,7 +30,7 @@
         android:textColor="#80000000"
         android:textSize="12sp"
         app:backgroundTint="#C4C4C4"
-        app:layout_constraintEnd_toStartOf="@+id/button8"
+        app:layout_constraintEnd_toStartOf="@+id/btnEnviar"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtSenhaUsuario" />
@@ -119,7 +119,7 @@
         android:ems="10"
         android:hint="Digite sua data de nascimento"
         android:inputType="textPersonName"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView10" />
@@ -133,7 +133,7 @@
         android:ems="10"
         android:hint="Digite seu email"
         android:inputType="textPersonName"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView11" />
@@ -147,7 +147,7 @@
         android:ems="10"
         android:hint="Digite seu email"
         android:inputType="textPersonName"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView12" />
@@ -161,7 +161,7 @@
         android:ems="10"
         android:hint="Digite sua senha"
         android:inputType="textPersonName"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView13" />
