--- a/app/src/main/res/layout/activity_aval_posto.xml
+++ b/app/src/main/res/layout/activity_aval_posto.xml
@@ -415,6 +415,7 @@
             android:id="@+id/button4"
             android:layout_width="82dp"
             android:layout_height="34dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:text="Enviar"
