--- a/app/src/main/res/layout/activity_cad_posto.xml
+++ b/app/src/main/res/layout/activity_cad_posto.xml
@@ -6,7 +6,16 @@
     android:layout_height="match_parent"
     android:background="#A3EBB1"
     tools:context=".CadPosto">
-
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Avaliação"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
@@ -16,7 +25,6 @@
         android:text="Lava-jato"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
     <CheckBox
         android:id="@+id/checkBox2"
         android:layout_width="wrap_content"
@@ -26,7 +34,6 @@
         android:text="Loja de conveniência"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox" />
-
     <CheckBox
         android:id="@+id/checkBox3"
         android:layout_width="wrap_content"
@@ -36,7 +43,6 @@
         android:text="Borracharia"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
-
     <CheckBox
         android:id="@+id/checkBox4"
         android:layout_width="wrap_content"
@@ -46,7 +52,6 @@
         android:text="Mercado"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
-
     <CheckBox
         android:id="@+id/checkBox5"
         android:layout_width="wrap_content"
@@ -56,7 +61,6 @@
         android:text="Outros"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
-
     <EditText
         android:id="@+id/editTextTextPersonName7"
         android:layout_width="0dp"
@@ -70,7 +74,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView11" />
-
     <EditText
         android:id="@+id/editTextTextPersonName6"
         android:layout_width="0dp"
@@ -84,7 +87,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView10" />
-
     <EditText
         android:id="@+id/editTextTextPersonName4"
         android:layout_width="0dp"
@@ -98,7 +100,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView7" />
-
     <EditText
         android:id="@+id/editTextTextPersonName5"
         android:layout_width="0dp"
@@ -112,7 +113,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView9" />
-
     <EditText
         android:id="@+id/editTextTextPersonName3"
         android:layout_width="0dp"
@@ -126,7 +126,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView8" />
-
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
@@ -137,7 +136,6 @@
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
@@ -148,7 +146,6 @@
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
-
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
@@ -159,7 +156,6 @@
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
@@ -170,7 +166,6 @@
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
@@ -181,7 +176,6 @@
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
@@ -192,7 +186,6 @@
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
@@ -204,7 +197,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
@@ -215,7 +207,6 @@
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="0dp"
@@ -228,7 +219,6 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6" />
-
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="wrap_content"
@@ -240,7 +230,16 @@
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox5" />
-
+    <RatingBar
+        android:id="@+id/ratingBar"
+        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:rating="3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
     <Button
         android:id="@+id/btnAttPrecos"
         android:layout_width="wrap_content"
