--- a/app/src/main/res/layout/activity_cad_mec.xml
+++ b/app/src/main/res/layout/activity_cad_mec.xml
@@ -8,32 +8,32 @@
     tools:context=".CadMec">
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnEnviarMec"
         android:layout_width="82dp"
         android:layout_height="34dp"
         android:text="Enviar"
         android:textColor="#80000000"
         android:textSize="12sp"
         app:backgroundTint="#C4C4C4"
-        app:layout_constraintBottom_toBottomOf="@+id/button5"
+        app:layout_constraintBottom_toBottomOf="@+id/btnCancelarMec"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button5"
-        app:layout_constraintTop_toTopOf="@+id/button5" />
+        app:layout_constraintStart_toEndOf="@+id/btnCancelarMec"
+        app:layout_constraintTop_toTopOf="@+id/btnCancelarMec" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnCancelarMec"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="Cancelar"
         android:textColor="#80000000"
         android:textSize="12sp"
         app:backgroundTint="#C4C4C4"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/btnEnviarMec"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+        app:layout_constraintTop_toBottomOf="@+id/txtRuaPosto" />
 
     <EditText
         android:id="@+id/txtEstadoMec"
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName6"
+        android:id="@+id/txtRuaPosto"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -82,17 +82,6 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7" />
-
-    <RatingBar
-        android:id="@+id/ratingBar"
-        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:rating="4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <EditText
         android:id="@+id/txtRuaMec"
@@ -107,16 +96,6 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="75dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Avaliação:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <EditText
         android:id="@+id/txtCidadeMec"
