--- a/app/src/main/res/layout/activity_cad_usuario.xml
+++ b/app/src/main/res/layout/activity_cad_usuario.xml
@@ -132,7 +132,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Digite seu email"
-        android:inputType="textPersonName"
+        android:inputType="textEmail"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,7 +160,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Digite sua senha"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
